--- a/tutorials/06_groups.ipynb
+++ b/tutorials/06_groups.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3f23fceb",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "5b2c9ee1",
    "metadata": {},
    "outputs": [],
@@ -132,23 +132,415 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "1e6efa3e",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>local_cell_index</th>\n",
+       "      <th>local_branch_index</th>\n",
+       "      <th>local_comp_index</th>\n",
+       "      <th>length</th>\n",
+       "      <th>radius</th>\n",
+       "      <th>axial_resistivity</th>\n",
+       "      <th>capacitance</th>\n",
+       "      <th>v</th>\n",
+       "      <th>Na</th>\n",
+       "      <th>Na_gNa</th>\n",
+       "      <th>...</th>\n",
+       "      <th>K_gK</th>\n",
+       "      <th>eK</th>\n",
+       "      <th>K_n</th>\n",
+       "      <th>Leak</th>\n",
+       "      <th>Leak_gLeak</th>\n",
+       "      <th>Leak_eLeak</th>\n",
+       "      <th>global_cell_index</th>\n",
+       "      <th>global_branch_index</th>\n",
+       "      <th>global_comp_index</th>\n",
+       "      <th>controlled_by_param</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-70.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.005</td>\n",
+       "      <td>-90.0</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>-70.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-70.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.005</td>\n",
+       "      <td>-90.0</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>-70.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-70.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.005</td>\n",
+       "      <td>-90.0</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>-70.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-70.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.005</td>\n",
+       "      <td>-90.0</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>-70.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-70.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.005</td>\n",
+       "      <td>-90.0</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>-70.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-70.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.005</td>\n",
+       "      <td>-90.0</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>-70.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-70.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.005</td>\n",
+       "      <td>-90.0</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>-70.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-70.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.005</td>\n",
+       "      <td>-90.0</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>-70.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-70.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.005</td>\n",
+       "      <td>-90.0</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>-70.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-70.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.005</td>\n",
+       "      <td>-90.0</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>-70.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-70.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.005</td>\n",
+       "      <td>-90.0</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>-70.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>11</td>\n",
+       "      <td>22</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-70.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.005</td>\n",
+       "      <td>-90.0</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>-70.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>11</td>\n",
+       "      <td>23</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>12 rows × 25 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "View with 3 different channels. Use `.nodes` for details."
+       "    local_cell_index  local_branch_index  local_comp_index  length  radius  \\\n",
+       "2                  0                   0                 0    10.0     0.3   \n",
+       "3                  0                   0                 1    10.0     0.3   \n",
+       "6                  0                   1                 0    10.0     0.3   \n",
+       "7                  0                   1                 1    10.0     0.3   \n",
+       "10                 1                   0                 0    10.0     0.3   \n",
+       "11                 1                   0                 1    10.0     0.3   \n",
+       "14                 1                   1                 0    10.0     0.3   \n",
+       "15                 1                   1                 1    10.0     0.3   \n",
+       "18                 2                   0                 0    10.0     0.3   \n",
+       "19                 2                   0                 1    10.0     0.3   \n",
+       "22                 2                   1                 0    10.0     0.3   \n",
+       "23                 2                   1                 1    10.0     0.3   \n",
+       "\n",
+       "    axial_resistivity  capacitance     v    Na  Na_gNa  ...   K_gK    eK  K_n  \\\n",
+       "2              5000.0          1.0 -70.0  True    0.05  ...  0.005 -90.0  0.2   \n",
+       "3              5000.0          1.0 -70.0  True    0.05  ...  0.005 -90.0  0.2   \n",
+       "6              5000.0          1.0 -70.0  True    0.05  ...  0.005 -90.0  0.2   \n",
+       "7              5000.0          1.0 -70.0  True    0.05  ...  0.005 -90.0  0.2   \n",
+       "10             5000.0          1.0 -70.0  True    0.05  ...  0.005 -90.0  0.2   \n",
+       "11             5000.0          1.0 -70.0  True    0.05  ...  0.005 -90.0  0.2   \n",
+       "14             5000.0          1.0 -70.0  True    0.05  ...  0.005 -90.0  0.2   \n",
+       "15             5000.0          1.0 -70.0  True    0.05  ...  0.005 -90.0  0.2   \n",
+       "18             5000.0          1.0 -70.0  True    0.05  ...  0.005 -90.0  0.2   \n",
+       "19             5000.0          1.0 -70.0  True    0.05  ...  0.005 -90.0  0.2   \n",
+       "22             5000.0          1.0 -70.0  True    0.05  ...  0.005 -90.0  0.2   \n",
+       "23             5000.0          1.0 -70.0  True    0.05  ...  0.005 -90.0  0.2   \n",
+       "\n",
+       "    Leak  Leak_gLeak  Leak_eLeak  global_cell_index  global_branch_index  \\\n",
+       "2   True      0.0001       -70.0                  0                    1   \n",
+       "3   True      0.0001       -70.0                  0                    1   \n",
+       "6   True      0.0001       -70.0                  0                    3   \n",
+       "7   True      0.0001       -70.0                  0                    3   \n",
+       "10  True      0.0001       -70.0                  1                    5   \n",
+       "11  True      0.0001       -70.0                  1                    5   \n",
+       "14  True      0.0001       -70.0                  1                    7   \n",
+       "15  True      0.0001       -70.0                  1                    7   \n",
+       "18  True      0.0001       -70.0                  2                    9   \n",
+       "19  True      0.0001       -70.0                  2                    9   \n",
+       "22  True      0.0001       -70.0                  2                   11   \n",
+       "23  True      0.0001       -70.0                  2                   11   \n",
+       "\n",
+       "    global_comp_index  controlled_by_param  \n",
+       "2                   2                    0  \n",
+       "3                   3                    0  \n",
+       "6                   6                    0  \n",
+       "7                   7                    0  \n",
+       "10                 10                    0  \n",
+       "11                 11                    0  \n",
+       "14                 14                    0  \n",
+       "15                 15                    0  \n",
+       "18                 18                    0  \n",
+       "19                 19                    0  \n",
+       "22                 22                    0  \n",
+       "23                 23                    0  \n",
+       "\n",
+       "[12 rows x 25 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "network.apical.view"
+    "network.apical.view.nodes"
    ]
   },
   {
@@ -162,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "0b8e9b38",
    "metadata": {},
    "outputs": [],
@@ -173,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "25322ebf",
    "metadata": {},
    "outputs": [],
@@ -183,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "f98f4e74",
    "metadata": {},
    "outputs": [
@@ -193,7 +585,7 @@
        "View with 3 different channels. Use `.nodes` for details."
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "a5d4f8ca",
    "metadata": {},
    "outputs": [
@@ -259,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "62b0dc0c",
    "metadata": {},
    "outputs": [
@@ -269,7 +661,7 @@
        "[{'Na_gNa': Array([0.4], dtype=float64)}]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "4e6108e9",
    "metadata": {},
    "outputs": [
@@ -306,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "13db06ab",
    "metadata": {},
    "outputs": [
@@ -317,7 +709,7 @@
        " {'axial_resistivity': Array([5000., 5000.], dtype=float64)}]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +745,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "jaxley_cpu",
    "language": "python",
    "name": "python3"
   },
@@ -367,7 +759,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
