--- a/tutorials/08_importing_morphologies.ipynb
+++ b/tutorials/08_importing_morphologies.ipynb
@@ -865,7 +865,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "jaxley_cpu",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -879,7 +879,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
